--- a/data/sfx/sfx.config
+++ b/data/sfx/sfx.config
@@ -124,15 +124,15 @@
    )
    (beep
       (filename   "horn.wav")
-      (volume     1.5   )
-      (roll-off   0.2   )
-      (positional 1     )
+      (volume     1.7  )
+      (roll-off   0.2  )
+      (positional 1    )
    )
-   (beep-ai
-      (filename   "horn_ai.wav")
-      (volume     0.5   )
-      (roll-off   0.2   )
-      (positional 1     )
+   (beep_player
+      (filename   "horn_player.wav")
+      (volume     1.7  )
+      (roll-off   0.2  )
+      (positional 1    )
    )
    (use_anvil
       (filename   "anvil.wav")
