Did some cleanup in karts directory.

--- a/data/karts/mozilla/mozilla.ac
+++ b/data/karts/mozilla/mozilla.ac
@@ -14393,7 +14393,7 @@ numvert 4
 -0.883542 -0.613706 -0.671514
 -1.02786 -0.613706 -0.671514
 numsurf 1
-SURF 0x30
+SURF 0x10
 mat 2
 refs 4
 0 0 0
@@ -18807,7 +18807,7 @@ refs 3
 kids 0
 OBJECT poly
 name "Cylinder.011"
-loc -0.00445609 -0.0123282 0
+loc -0.00445609 -0.0123282 0.0683202
 crease 45.000000
 numvert 196
 -0.122154 0.173203 0.604635
@@ -26000,7 +26000,7 @@ numvert 4
 -0.461216 -0.61321 -0.671514
 -0.605537 -0.61321 -0.671514
 numsurf 1
-SURF 0x30
+SURF 0x10
 mat 2
 refs 4
 0 0 0
